Fixed z-clipping

--- a/style.css
+++ b/style.css
@@ -207,14 +207,14 @@ body {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	transform: rotateY(0deg);
+	transform: rotateY(0deg) translateZ(1px);
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	z-index: 5;
 }
 .card-back {
-	transform: rotateY(180deg);
+	transform: rotateY(180deg) translateZ(1px);
 	position: absolute;
 	top: 0;
 	width: 100%;
